correct layout issues in first interface

--- a/pasco/style.css
+++ b/pasco/style.css
@@ -14,7 +14,7 @@ body {
 
 .outer-box {
   background-color: #222;
-  padding: 10px 0 9px;
+  padding: 13px 0 9px;
   text-align: center;
   width: 100%;
   /* height: 44px; */
@@ -29,7 +29,7 @@ body {
 }
 
 .top-bar i {
-  margin: 0 8px 0 0;
+  margin: 0 9px 0 0;
   color: #707070;
   cursor: pointer;
   font-size: 16px;
@@ -77,7 +77,7 @@ body {
 
 .main-menu {
   /* background-color: #1a1a1a; */
-  padding: 5px 0;
+  padding: 6px 0;
 }
 
 
@@ -99,9 +99,9 @@ body {
 .sub-menu {
   display: flex;
   align-items: center;
-  gap: 22px;
+  gap: 24px;
   flex-wrap: wrap;
-  margin-left: 63px;
+  padding-left: 64px;
 }
 
 .sub-menu a{
@@ -117,21 +117,25 @@ body {
   font-family: "Montserrat";
   text-decoration: none;
   list-style: none;
-  /* padding-left: 5px; */
+ 
 }
 
 .sub-menu li.active{
   border-bottom: 4px solid #ff4081;
-  padding-bottom: 19px;
-  margin-top: 21px;
+  /* margin-top: 21px; */
+   padding: 21px 0 22px 15px;
+}
+
+.sub-menu li.non-active{
+ padding: 21px 0 26px ;
 }
 
 .bar-icons {
   display: flex;
   align-items: center;
   /* gap: 15px; */
-  margin-right: 10px;
-  padding-top: 7px;
+  margin-right: 15px;
+  /* padding-top: 7px; */
 }
 
 .bar-icons span {
@@ -148,7 +152,7 @@ body {
 .position_box {
   height: 100%;
   width: 100%;
-  padding: 210px 40px 100px;
+  padding: 208px 40px 100px;
   text-align: center;
 }
 
@@ -156,21 +160,22 @@ body {
   font-size: 18px;
   letter-spacing: 2px;
   color: #ccc;
-  margin-bottom: 12px;
+  padding-bottom: 14px;
 }
 
 h1 {
   font-size: 44px;
   font-weight: bold;
-  margin-bottom: 27px;
+  margin-bottom: 26px;
   text-transform: uppercase;
+  padding: 0 17%;
 }
 
 .blue_btn {
   background: #3a41ff;
   border: none;
   color: white;
-  padding: 12px 32px;
+  padding: 12px 30px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 50px;
@@ -406,6 +411,8 @@ h1 {
 
 .slidebar-heading h4 {
     color: blue;
+    border-bottom: 1px solid #aec3ff;
+    padding-bottom: 10px;
 }
 
 .sidebar {
@@ -462,6 +469,10 @@ h1 {
 
 .subscribe{
   padding: 5px 20px 0;
+}
+
+.subscribe label{
+  color: #111;
 }
 
 .subscribe input {
